Fixed loudcrow jumper.

--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ iframe {
 }*/
 
 #body div#sidebar div div ul li a {
-	color: #ffffff;/*#105012;/*533841*//**/
+	color: #CC0000;/*#105012;/*533841*//**/
 	text-decoration: none;
 	text-shadow:none;/* 0 1px #c0d0c0; /*fae9ef*/
 }
